--- a/modules/xdebug/templates/xdebug.ini.erb
+++ b/modules/xdebug/templates/xdebug.ini.erb
@@ -1,14 +1,13 @@
-xdebug.default_enable=1
-xdebug.remote_enable=1
+xdebug.mode=debug
+xdebug.discover_client_host=true
+xdebug.start_with_request=yes
 xdebug.remote_handler=dbgp
-xdebug.remote_host=<%= @ssh_ip %>
-xdebug.remote_port=<%= @port_number %>
-xdebug.remote_autostart=1
-xdebug.remote_connect_back=1
-xdebug.var_display_max_depth = 10
-xdebug.var_display_max_children = 256
-xdebug.var_display_max_data = 1024
+xdebug.client_host=<%= @ssh_ip %>
+xdebug.client_port=<%= @port_number %>
+xdebug.xdebug.discover_client_host=1
+xdebug.var_display_max_depth=10
+xdebug.var_display_max_children=256
+xdebug.var_display_max_data=1024
 xdebug.idekey=<%= @ide_name %>
 ; Enable php profiling with get param XDEBUG_PROFILE=1
-xdebug.profiler_enable_trigger=1
 xdebug.profiler_output_name=cachegrind.out.%t.%p
