--- a/modules/xdebug/templates/xdebug.ini.erb
+++ b/modules/xdebug/templates/xdebug.ini.erb
@@ -1,4 +1,4 @@
-xdebug.mode=debug
+xdebug.mode=debug,develop
 xdebug.discover_client_host=true
 xdebug.start_with_request=yes
 xdebug.remote_handler=dbgp
