--- a/modules/xdebug/templates/xdebug.ini.erb
+++ b/modules/xdebug/templates/xdebug.ini.erb
@@ -1,4 +1,4 @@
-xdebug.mode=debug,develop
+xdebug.mode=debug,develop,profile
 xdebug.discover_client_host=true
 xdebug.start_with_request=yes
 xdebug.remote_handler=dbgp
@@ -19,4 +19,3 @@ xdebug.remote_connect_back=1
 ; Enable php profiling with get param XDEBUG_PROFILE=1
 xdebug.profiler_enable_trigger=1
 xdebug.profiler_output_name=cachegrind.out.%t.%p
-
